<resources>
    <string name="app_name">Laurdroid</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="welcome_text">Welcome to Laurdroid!</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_out">Sign out</string>
    <string name="element_text">InsideView</string>
    <string name="my_gallery">My gallery</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="random_movie">Random movie</string>
    <string name="take_photo">Take Photo</string>
    <string name="welcomeName">Welcome, %s</string>
    <string name="detailsURL">https://api.themoviedb.org/3/movie/%d?api_key=%s&amp;language=en-US</string>
    <string name="popularURL">https://api.themoviedb.org/3/movie/popular?api_key=%s&amp;language=en-US&amp;page=1</string>
    <string name="topRatedURL">https://api.themoviedb.org/3/movie/top_rated?api_key=%s&amp;language=en-US&amp;page=1</string>
    <string name="todo">TODO</string>
    <string name="randomURL">https://api.themoviedb.org/3/movie/%d?api_key=%s&amp;language=en-US</string>
    <string name="regenerate_movie">Regenerate Movie</string>
    <string name="randomReleaseDate">Release Date: %s</string>
    <string name="randomVoteAverage">Vote Average: %s</string>
    <string name="randomVoteCount">Vote Count: %s</string>
    <string name="randomGenres">Genres: %s</string>
 </resources>